# nanofish

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: branch-naming.yml  ci.yml  release.yml
demos/rasberry_pico_w/: Cargo.toml  README.md  build.rs  memory.x
demos/rasberry_pico_w/.cargo/: config.toml
demos/rasberry_pico_w/src/: main.rs
demos/tokio_hello_world/: Cargo.toml  README.md
demos/tokio_hello_world/src/: main.rs
examples/rasberry_pico_w/: Cargo.toml
lib/: Cargo.toml
lib/src/: error.rs  handler.rs  http_header_parser.rs  lib.rs  request.rs  response.rs  server.rs  stream_search.rs
lib/src/abstarct_socket/: README.md  mod.rs  socket.rs  stream_search.rs
lib/src/abstarct_socket/embassy_impl/: mod.rs  socket.rs  stream_read_error.rs  tcp_socket_pool.rs
lib/src/abstarct_socket/mocks/: error.rs  mock_loopback_socket.rs  mock_multipart_read_stream.rs  mock_read_stream.rs  mock_socket.rs
lib/src/abstarct_socket/tokio_impl/: mod.rs  socket.rs  stream_read_error.rs  tokio_socket_wrapper.rs  write_with.rs
lib/src/mocks/: error.rs
lib/src/socket/: README.md  mod.rs  socket.rs
lib/src/socket/embassy_impl/: mod.rs
lib/src/socket/mocks/: mock_multipart_read_stream.rs  mod.rs
lib/src/socket/tokio_impl/: tokio_socket_wrapper.rs  write_with.rs
lib/src/web_socket/: web_socket.rs
lib/tests/: tokio_impl_tests.rs
scripts/: check-build-matrix.sh  fmt-rust-targets.sh
src/: allocator.rs  client.rs  error.rs  find_sequence.rs  fmt.rs  handler.rs  header.rs  http_header_parser.rs  lib.rs  method.rs  options.rs  protocol.rs  request.rs  response.rs  server.rs  status_code.rs  stream_search.rs  worker_memory.rs
src/mocks/: error.rs  mod.rs
src/socket/: README.md  mod.rs  socket_connector.rs  socket_listener.rs  socket_traits.rs
src/socket/embassy_impl/: socket.rs  tcp_socket_pool.rs
src/socket/mocks/: mock_loopback_socket.rs  mock_read_stream.rs  mock_socket.rs
src/socket/tokio_impl/: mod.rs  socket.rs
src/web_socket/: header.rs  header_reader.rs  header_writer.rs  mod.rs  web_socket.rs
src/web_socket/test_utils/: mod.rs
tests/: tokio_impl_tests.rs
