[package]
name = "nanooctopus"
version = "0.1.0"
edition = "2024"
description = "🐙 A lightweight, `no_std` HTTP server for embedded systems built on top of Embassy networking."
documentation = "https://docs.rs/nanooctopus"
repository = "https://github.com/kdimonych/nanooctopus"
license = "MIT"
keywords = ["no_std", "embedded", "async", "http_server", "websockets"]
authors = ["kdimonych <k.dimonych@gmail.com>"]

[features]
default = []
std = ["embedded-io-async/std"]
ws = ["dep:sha1", "dep:binascii", "dep:modular-bitfield"]
defmt = [
    "dep:defmt",
    "embassy-net/defmt",
    "defmt-or-log/defmt",
    "embedded-io-async/defmt-03",
    "heapless/defmt-03",
]
log = ["dep:log", "defmt-or-log/log"]

embassy_impl = [
    "dep:embassy-net",
    "dep:embassy-time",
    "dep:embassy-sync",
    "embassy-net/dns",
    "embassy-net/medium-ethernet",
    "embassy-net/tcp",
]
mocks = ["dep:ringbuf", "dep:tokio", "std"]
proto-ipv6 = ["embassy-net?/proto-ipv6"]
tokio_impl = ["dep:tokio", "std"]


[dependencies]
defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
defmt-or-log = { version = "0.2.3", default-features = false }

embassy-net = { version = "0.7.1", features = [
    "dns",
    "medium-ethernet",
    "proto-ipv4",
    "tcp",
], optional = true }
embassy-time = { version = "0.5.0", default-features = false, optional = true }
embassy-sync = { version = "0.7", default-features = false, optional = true }
heapless = "0.8"
embedded-io-async = "0.6"
# SHA-1 for no_std environments - try sha1 crate instead
sha1 = { version = "0.10", default-features = false, optional = true }
binascii = { version = "0.1.4", default-features = false, features = [
    "encode",
], optional = true }
modular-bitfield = { version = "0.13.0", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

# The `ringbuf` dependency is used for the mock implementations of the socket traits, providing a simple
# ring buffer for testing purposes.
ringbuf = { version = "0.5", optional = true }

#Bump allocator
prefix-arena = "0.1"

# Futures and async utilities
embassy-futures = "0.1"


[dev-dependencies]
futures-lite = "2.0"
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
env_logger = "0.11"
ringbuf = "0.5"

[[test]]
name = "tokio_impl_tests"
path = "tests/tokio_impl_tests.rs"
required-features = ["tokio_impl"]
