[package]
name = "nanofish"
version = "0.11.9"
edition = "2024"
rust-version = "1.91"
description = "🐟 A lightweight, `no_std` HTTP client and server for embedded systems built on top of Embassy networking."
documentation = "https://docs.rs/nanofish"
repository = "https://github.com/rttfd/nanofish"
license = "MIT"
keywords = ["no_std", "embedded", "async", "http_client", "http_server"]
authors = ["rttf <contact@rttf.dev>"]

[features]
default = []
tls = ["dep:embedded-tls", "dep:rand_core"]
defmt = ["dep:defmt", "embassy-net/defmt"]
log = ["dep:log", "embassy-net/log"]

[dependencies]
defmt = { version = "1.1.0", optional = true }
embassy-net = { version = "0.9.1", features = [
    "dns",
    "medium-ethernet",
    "proto-ipv4",
    "proto-ipv6",
    "tcp",
] }
embassy-time = "0.5.1"
embedded-io-async = "0.7.0"
embedded-tls = { version = "0.18.0", default-features = false, optional = true }
heapless = "0.9.3"
log = { version = "0.4", optional = true }
rand_core = { version = "0.6", optional = true }

[dev-dependencies]
futures-lite = "2.6"

[lints.clippy]
panic = "forbid"
unwrap_used = "forbid"
expect_used = "forbid"
todo = "forbid"
unimplemented = "forbid"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
